2008-01-10  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gst_private.h: (GST_CAT_TYPES):
	  Add GST_CAT_TYPES, for consistency, and so that the other
	  debug categories don't make fun of it. Spotted by Saur on IRC.

2008-01-10  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/parse/Makefile.am:
	  Move types.h from EXTRA_DIST to noinst_HEADERS.

2008-01-10  Sebastian Dröge  <slomo@circular-chaos.org>

	* autogen.sh:
	  Add -Wno-portability to the automake parameters to stop warnings
	  about GNU make extensions being used. We require GNU make in almost
	  every Makefile anyway.

	* configure.ac:
	  Use AM_PROG_CC_C_O as a compiler that accepts both -c and -o
	  at the same time is required for per target flags.

2008-01-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gstmacros.h:
	  Include glib/gmacros.h for G_BEGIN_DECLS. Check if
	  __GNUC__ is defined before using it.

2008-01-09  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/gst/gstreamer-sections.txt:
	* gst/gst.c: (init_post):
	* gst/gstplugin.c: (_gst_plugin_register_static),
	  (gst_plugin_register_static), (_gst_plugin_initialize),
	  (gst_plugin_register_func):
	* gst/gstplugin.h: (GST_PLUGIN_DEFINE_STATIC):
	  API: add gst_plugin_register_static() and deprecate
	  GST_PLUGIN_DEFINE_STATIC, since it's not portable
	  (#498924).
	  Also, in _gst_plugin_register_static(), make sure to call
	  g_thread_init() before calling GLib functions such as
	  g_list_append() if we're not initialised yet, since that
	  may lead to random crashes with older GSlice/GLib versions.

	* tests/check/gst/gstplugin.c:
	  Adapt unit test to above changes.

2008-01-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gst_private.h: (STRUCTURE_ESTIMATED_STRING_LEN):
	* gst/gstcaps.c: (gst_caps_to_string):
	* gst/gststructure.c: (GST_ASCII_IS_STRING),
	  (priv_gst_structure_append_to_gstring), (gst_structure_to_string):